k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: spot-render
---
apiVersion: v1
kind: Namespace
metadata:
  name: rendering
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
