k8s/portal-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: spot-render-web
  namespace: spot-render
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: spot-render.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: spot-render-web-stable
                port:
                  number: 80
